// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grading NavLink does NOT renders for Role.Student 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\" />
</Blueprint3.Navbar>"
`;

exports[`Grading NavLink renders for Role.Admin 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\" />
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/academy/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
    <NavLink to=\\"/academy/adminpanel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"settings\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md hidden-lg\\">
        Admin Panel
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;

exports[`Grading NavLink renders for Role.Staff 1`] = `
"<Blueprint3.Navbar className=\\"NavigationBar secondary-navbar\\">
  <Blueprint3.NavbarGroup align=\\"left\\" />
  <Blueprint3.NavbarGroup align=\\"right\\">
    <NavLink to=\\"/academy/groundcontrol\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"satellite\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Ground Control
      </div>
    </NavLink>
    <NavLink to=\\"/academy/dashboard\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"globe\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm\\">
        Dashboard
      </div>
    </NavLink>
    <NavLink to=\\"/academy/sourcereel\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"mobile-video\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Sourcereel
      </div>
    </NavLink>
    <NavLink to=\\"/academy/grading\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"endorsed\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Grading
      </div>
      <Connect(NotificationBadge) notificationFilter={[Function (anonymous)]} disableHover={true} />
    </NavLink>
    <NavLink to=\\"/academy/storysimulator\\" activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\">
      <Blueprint3.Icon icon=\\"crown\\" />
      <div className=\\"navbar-button-text hidden-xs hidden-sm hidden-md\\">
        Story Simulator
      </div>
    </NavLink>
  </Blueprint3.NavbarGroup>
</Blueprint3.Navbar>"
`;
